<resources>
    <string name="app_name">Restaurant Advisor</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="firstname">FirstName</string>
    <string name="age">Age</string>
    <string name="logout">Logout</string>
    <string name="btnTextlog_in">Log in</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="description">Description</string>
    <string name="localization">Localization</string>
    <string name="grade">Grade</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">Website</string>
    <string name="hours">Hours</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="email">Email</string>
    <string name="notAccount">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="here">here</string>
    <string name="modify_restaurant">Modify restaurant</string>
    <string name="menuRestaurant">- - - - - - Menu - - - - - -</string>
    <string name="profileUser">- - - - - - Profile - - - - - -</string>
    <string name="restaurantList">- - - - - - Restaurant - - - - - -</string>
    <string name="menusRestaurant">- - - - - - Menus - - - - - -</string>
    <string name="restaurantsList">- - - - - - Restaurants - - - - - -</string>
    <string name="commentsList">- - - - - - Comments - - - - - -</string>
    <string name="noMenu">There\'s no menu</string>
    <string name="price">Price</string>
    <string name="modify_menu">Modify Menu</string>
    <string name="menu_name">Menu Name</string>
    <string name="add_menu">Add menu</string>
    <string name="title_activity_maps">Map</string>
    <string name="comments">Comments</string>
    <string name="writecomments">Write your comment here…</string>
    <string name="send_comment">Send comment</string>
    <string name="logo">Logo</string>
</resources>
