<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurant.RestaurantAddActivity"
    android:background="@drawable/gradient_black"
    android:padding="10dp">

    <EditText
        android:id="@+id/etMenuName"
        android:layout_width="match_parent"
        android:background="@color/transparent_white"
        android:padding="10dp"
        android:textColorHint="@color/transparent_white"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:hint="@string/menu_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMenuDescription"
        android:layout_width="match_parent"
        android:background="@color/transparent_white"
        android:padding="10dp"
        android:textColorHint="@color/transparent_white"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/description"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMenuName" />

    <EditText
        android:id="@+id/etMenuPrice"
        android:layout_width="match_parent"
        android:background="@color/transparent_white"
        android:padding="10dp"
        android:textColorHint="@color/transparent_white"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/price"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMenuDescription" />

    <Button
        android:id="@+id/bAddMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:background="@color/green"
        android:text="@string/add_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>