<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurant.RestaurantActivity"
    android:background="@drawable/gradient_black"
    android:padding="10dp">

    <View
        android:id="@+id/view9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>

    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView27"
        android:layout_marginTop="10dp"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/restaurantList"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnComments"
        android:textColor="@color/black"
        android:layout_width="78dp"
        android:layout_height="27dp"
        android:layout_below="@+id/view10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/comments"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view10"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvName"
        android:textColor="@color/white"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView19"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView19"
        android:layout_toRightOf="@+id/textView19"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView16"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/description"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDesc"
        android:textColor="@color/white"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView16"
        android:layout_toRightOf="@+id/textView16"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView21"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/grade"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvGrade"
        android:textColor="@color/white"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView21"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView21"
        android:layout_toRightOf="@+id/textView21"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView17"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGrade"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/localization"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLocal"
        android:textColor="@color/blue"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView17"
        android:layout_toRightOf="@+id/textView17"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView18"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLocal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/phone_number"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPhone"
        android:textColor="@color/blue"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView18"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView18"
        android:layout_toRightOf="@+id/textView18"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView20"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPhone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/website"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvWeb"
        android:textColor="@color/blue"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView20"
        android:layout_toRightOf="@+id/textView20"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView22"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWeb"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/hours"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvHours"
        android:textColor="@color/white"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView22"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@+id/textView22"
        android:layout_toRightOf="@+id/textView22"
        android:textSize="20sp"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvHours"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/textView23"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/menusRestaurant"
        android:textSize="20sp"
        android:layout_alignParentLeft="true" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/textView23"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/noMenu"
        android:textSize="20sp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_more"
        android:visibility="visible"
        app:fabSize="mini" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDel"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/fab"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:layout_toStartOf="@+id/fab"
        android:layout_toLeftOf="@+id/fab"
        android:src="@drawable/ic_delete"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_red_dark"
        app:fabCustomSize="31dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_above="@+id/fab"
        android:layout_alignEnd="@+id/fab"
        android:layout_alignRight="@+id/fab"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_add"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_green_dark"
        app:fabCustomSize="31dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabModify"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_alignBottom="@+id/fabDel"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/fabDel"
        android:layout_toLeftOf="@+id/fabDel"
        android:src="@drawable/ic_modify"
        android:visibility="gone"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:fabCustomSize="31dp" />

</RelativeLayout>